# coding-solutions

./: .gitignore  README.md  coding-solutions.code-workspace  main.py  pyproject.toml
airflow/dags/: add_dag_bags.py  dag_1.py
airflow/dags/data_lake/create_employee_table/: poe_tasks.toml  pyproject.toml
airflow/dags/data_lake/create_employee_table/src/: main.py
airflow/dags/data_lake/create_employee_table/src/tasks/: task_1.py
airflow/dags/tasks/proj/: pyproject.toml  requirements.txt
airflow/dags/tasks/proj/src/: main.py
cache/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
cache/server/: database.py  database_2.py  main.py  main_2.py  pagination.py
create-table/: pyproject.toml
create-table/output/: resul.csv
create-table/output/worksteps/step_1/: partial_result_1.csv  partial_result_2.csv  partial_result_3.csv
create-table/output/worksteps/step_2/: partial_result_1.csv  partial_result_2.csv  partial_result_3.csv  partial_result_4.csv  partial_result_5.csv
create-table/output/worksteps/step_3/: result.csv
create-table/src/: main.py
create-table/src/config/: config.py
create-table/src/work_steps/step_1/: obj_1.py  step_1 copy.py  step_1.py
create-table/src/work_steps/step_2/: obj_2.py  step_2.py
create-table/src/work_steps/step_3/: obj_3.py  step_3.py
create-table/src/worksteps/step_1/: step_1.py
create-table/src/worksteps/step_2/: step_2.py
create-table/src/worksteps/step_3/: step_3.py
google-drive/: .gitignore  README.md  config.py  google_drive_util_1.py  google_drive_util_2.py  google_drive_utils.py  main.py  pyproject.toml  service_account_info_model.py
infra/.azure-pipelines/: azure-pipelines-feature-branch-2.yaml  azure-pipelines-feature-branch.yaml
infra/infra/: api-gateway-authorizer.tf  api-gateway.tf  cloudwatch.tf  cognito.tf  iam.tf  lambda_prj.tf  locals.tf  provider.tf  vars.tf
lambdas/lambda-prj/: poe_tasks.toml  pyproject.toml
monorepo/: jest.config.base.js  package.json  tsconfig.base.json
monorepo2/: package-lock.json  package.json
pagination/: pagination.py  pagination_schema.py
poc-api/: .env  README.md  poe_tasks.toml  pyproject.toml
poc-api/src/: controllers.py  main.py
poc-people-analytics-api/: pyproject.toml
poc-people-analytics-api/src/: models.py  routers.py
schemas/: person_schema.py
tree/: hierarquia.csv  main.py  pyproject.toml
typescript/: .swcrc  jest.config.base.js  lerna.json  package-lock.json  package.json  tsconfig.base.json
typescript/tools/: package.json  (+1 more)
vscode/: settings.json
(+45 files in other folders)
