[tool.poetry]
name = "create-table"
version = "0.1.0"
description = ""
authors = ["icaroribeiro <icaroribeiro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.21.0"
zeep = "^4.3.1"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
