[tool.poetry]
name = "tree"
version = "0.1.0"
description = ""
authors = ["icaroribeiro <icaroribeiro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
pandas = "^2.2.3"
bigtree = "^0.25.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
