[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["icaroribeiro <icaroribeiro@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
